force-app/main/default/objects/VDT_Data_Calculation__c.object
<CustomObject>
    <label>Data Calculation</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Data Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF (End_Year__c!=0,DATE(IF(End_Month__c=0, End_Year__c+1, End_Year__c), 1,1) -1, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATE(Start_Year__c , IF(Start_Month__c = 0, 1, Start_Month__c) , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VDT_Calculation_Date__c</fullName>
        <label>Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VDT_Calculation_Result__c</fullName>
        <label>Calculation Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VDT_Job_Created_Date__c</fullName>
        <label>Job Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VDT_Job_End_Date__c</fullName>
        <label>Job End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VDT_Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VDT_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>