force-app/main/default/objects/VDT_Data_Calculation__c/fields/Batches_Number__c.field-meta.xml
<CustomField>
    <fullName>Batches_Number__c</fullName>
    <label>Batches Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>