force-app/main/default/objects/VDT_Data_Calculation__c/fields/Permission_Set_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Profile_Name__c</fullName>
    <label>Permission Set/Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>