force-app/main/default/objects/VDT_Data_Calculation__c/fields/VDT_Country__c.field-meta.xml
<CustomField>
    <fullName>VDT_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>