force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Field_Level_Security_Analysis.recordType-meta.xml
<RecordType>
    <fullName>VDT_Field_Level_Security_Analysis</fullName>
    <active>true</active>
    <label>Field Level Security Analysis</label>
</RecordType>