force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Master_Data_Analysis.recordType-meta.xml
<RecordType>
    <fullName>VDT_Master_Data_Analysis</fullName>
    <active>true</active>
    <label>Master Data Analysis</label>
</RecordType>