force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Object_Field_Analysis.recordType-meta.xml
<RecordType>
    <fullName>VDT_Object_Field_Analysis</fullName>
    <active>true</active>
    <label>Object Field Analysis</label>
</RecordType>