force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Object_Field_Value_Occurrence.recordType-meta.xml
<RecordType>
    <fullName>VDT_Object_Field_Value_Occurrence</fullName>
    <active>true</active>
    <label>Object Field Value Occurrence</label>
</RecordType>