force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Product_Adoption.recordType-meta.xml
<RecordType>
    <fullName>VDT_Product_Adoption</fullName>
    <active>true</active>
    <label>Product Adoption</label>
</RecordType>