force-app/main/default/objects/VDT_Data_Calculation__c/recordTypes/VDT_Territory_Analysis.recordType-meta.xml
<RecordType>
    <fullName>VDT_Territory_Analysis</fullName>
    <active>true</active>
    <label>Territory Analysis</label>
</RecordType>