force-app/main/default/objects/VDT_Data_Calculation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>VDT_Calculation_Date__c</columns>
    <columns>VDT_Calculation_Result__c</columns>
    <columns>Start_Year__c</columns>
    <columns>Start_Month__c</columns>
    <columns>End_Year__c</columns>
    <columns>End_Month__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VDT_Object_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Batches_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>