force-app/main/default/objects/VDT_Data_Calculation__c/listViews/All_Master_Data_Analysis.listView-meta.xml
<ListView>
    <fullName>All_Master_Data_Analysis</fullName>
    <columns>NAME</columns>
    <columns>VDT_Calculation_Date__c</columns>
    <columns>VDT_Country__c</columns>
    <columns>Start_Year__c</columns>
    <columns>Start_Month__c</columns>
    <columns>End_Year__c</columns>
    <columns>End_Month__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VDT_Job_End_Date__c</columns>
    <columns>Batches_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VDT_Data_Calculation__c.VDT_Master_Data_Analysis</value>
    </filters>
    <label>All Master Data Analysis</label>
</ListView>